Agrego archivo .gitignore y links de redes sociales en index.html

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
   <footer>
     <div class="footer-section-container">
       <ul class="socials">
-        <li><a class="socials-icon" href=""> <i class="bi bi-github"></i></a></li>
-        <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
+        <li><a class="socials-icon" href="https://github.com/emanuelAlavar"> <i class="bi bi-github"></i></a></li>
+        <li><a class="socials-icon" href="https://www.linkedin.com/in/emanuel-alavar-676b3a15b/"><i class="bi bi-linkedin"></i></a></li>
         <li><a class="socials-icon" href=""><i class="bi bi-twitter"></i></a></li>
         <li><a class="socials-icon" href=""><i class="bi bi-facebook"></i></a></li>
         <li><a class="socials-icon" href=""><i class="bi bi-instagram"></i></a></li>
