Agrego link de instagram en index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <li><a class="socials-icon" href="https://www.linkedin.com/in/emanuel-alavar-676b3a15b/"><i class="bi bi-linkedin"></i></a></li>
         <li><a class="socials-icon" href=""><i class="bi bi-twitter"></i></a></li>
         <li><a class="socials-icon" href=""><i class="bi bi-facebook"></i></a></li>
-        <li><a class="socials-icon" href=""><i class="bi bi-instagram"></i></a></li>
+        <li><a class="socials-icon" href="https://www.instagram.com/manusovich15/"><i class="bi bi-instagram"></i></a></li>
       </ul>
     </div>
       <div class="footer-section-container">
