--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
           <a href="#projects">Experiencia</a>
         </li>
         <li class="menu-item">
+          <a href="#technologies">Tecnologías</a>
+        </li>
+        <li class="menu-item">
           <a href="#contact">Contacto</a>
         </li>
       </ul>
     </nav>
   </header>
-
   <section id="home" class="content">
     <div class="half-section">
      <div class="avatar-container">
@@ -109,20 +111,67 @@
         </ul>
     </aside>
   </section>
-  <section id="contact" class="content">
+  <section id="technologies" class="content flex-row">
     <aside class="half-section text-section">
-      <form action="">
-        <label for="name">Nombre</label>
-        <input class="input-field" type="text" name="name" id="name">
-        <label for="email">Email</label>
-        <input class="input-field type="email" name="email" id="email">
-        <label for="message">Mensaje</label>
-        <textarea class="input-field" name="message" id="message" cols="30" rows="10"></textarea>
-        <input class="btn-send-message" type="submit" value="Enviar">
+       <div class="tech-icons-container">
+          <ul class="tech-icon-list">
+            <li class="tech-icon-item">
+              <img height="80px" width="auto" src="./assets/tech-icons/icon-git.svg" alt="Git Icon">
+              <span>Git</span>
+            </li>
+            <li class="tech-icon-item">
+              <img height="80px" width="auto" src="./assets/tech-icons/icon-github.svg" alt="Git Icon">
+              <span>GitHub</span>
+            </li>
+            <li class="tech-icon-item-end">
+              <img height="80px" width="auto" src="./assets/tech-icons/icon-html.svg" alt="Git Icon">
+              <span>HTML</span>
+            </li>
+          </ul>
+          <ul class="tech-icon-list">
+            <li class="tech-icon-item">
+              <img height="80px" width="auto" src="./assets/tech-icons/icon-css.svg" alt="Git Icon">
+              <span>CSS</span>
+            </li>
+            <li class="tech-icon-item">
+              <img height="80px" width="auto" src="./assets/tech-icons/icon-js.svg" alt="Git Icon">
+              <span>JavaScript</span>
+            </li>
+            <li class="tech-icon-item-end">
+              <img height="80px" width="auto" src="./assets/tech-icons/icon-react.svg" alt="Git Icon">
+              <span>React</span>
+            </li>
+          </ul>
+          <ul class="tech-icon-list-end">
+            <li class="tech-icon-item">
+              <img height="80px" width="auto" src="./assets/tech-icons/icon-nodejs.svg" alt="Git Icon">
+              <span>NodeJS</span>
+            </li>
+            <li class="tech-icon-item">
+              <img height="80px" width="auto" src="./assets/tech-icons/icon-postgresql.svg" alt="Git Icon">
+              <span>PostgreSQL</span>
+            </li>
+          </ul>
+       </div>
     </aside>
     <aside class="half-section title-section">
-      <h2>Envíame un mensaje y charlemos!</h2>
+      <h2>Tecnologías que manejo</h2>
     </aside>
+  </section>
+    <section id="contact" class="content">
+      <aside class="half-section title-section">
+        <h2>Envíame un mensaje y charlemos!</h2>
+      </aside>
+      <aside class="half-section text-section">
+        <form action="">
+          <label for="name">Nombre</label>
+          <input class="input-field" type="text" name="name" id="name">
+          <label for="email">Email</label>
+          <input class="input-field type="email" name="email" id="email">
+          <label for="message">Mensaje</label>
+          <textarea class="input-field" name="message" id="message" cols="30" rows="10"></textarea>
+          <input class="btn-send-message" type="submit" value="Enviar">
+      </aside>
   </section>
 
   <footer>
